@@ -1,25 +1,13 @@
 # Build stage
 FROM gradle:8.4.0-jdk21-alpine AS build
-WORKDIR /app
-
-# Copia los archivos necesarios para construir las dependencias
-COPY build.gradle settings.gradle gradlew ./
-RUN ./gradlew build --no-daemon || return 0
-
-# Copia el resto del proyecto y construye
-COPY . .
-RUN ./gradlew build --no-daemon
+COPY --chown=gradle:gradle . /home/gradle/src
+WORKDIR /home/gradle/src
+RUN gradle build --no-daemon 
 
 # Run stage
 FROM eclipse-temurin:21-jre-alpine
-WORKDIR /app
-
-# Agrega un usuario para evitar ejecutar el contenedor como root
-RUN addgroup -S appgroup && adduser -S appuser -G appgroup
-USER appuser
-
-COPY --from=build /app/build/libs/*.jar app.jar
-
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "app.jar"]
+RUN mkdir /app
+COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
 
